--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -1,7 +1,16 @@
+parameters:
+    mailer_user: "airidasams@gmail.com"
+    sender_name: "SymfonyHomeWork #3"
+
 framework:
     translator: ~
+    templating:
+            engines: ['twig', 'php']
 
 fos_user:
     db_driver: orm
     firewall_name: main
     user_class: App\Entity\User
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
