--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,10 +1,10 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+        App\Entity\User: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_ADMIN: ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
@@ -16,13 +16,13 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern: ^/
-                form_login:
-                    provider: fos_userbundle
-                    csrf_token_generator: security.csrf.token_manager
+#            pattern: ^/
+            form_login:
+                provider: fos_userbundle
+                csrf_token_generator: security.csrf.token_manager
 
-                logout:       true
-                anonymous:    true
+            logout: ~
+            anonymous: true
 
 
             # activate different ways to authenticate
