composer require --dev debug-bundle

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "*",
+        "symfony/debug-bundle": "^4.0"
     },
     "config": {
         "preferred-install": {
