--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -14,3 +14,7 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+
+registration:
+    form:
+        type: App\Form\FOS_RegistrationForm
