--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "symfony/dotenv": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
+        "symfony/http-foundation": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.3",
         "symfony/twig-bundle": "^4.0",
