add horizontal layout

--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -20,4 +20,4 @@ fos_user:
             type: App\Form\Type\FOSRegistrationFormType
 
 twig:
-  form_themes: ['bootstrap_4_layout.html.twig']
+  form_themes: ['bootstrap_4_horizontal_layout.html.twig']
